# mcp-tool-search

./: .env.example  .gitignore  Dockerfile  design-doc.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
config/: common.config.yaml  dev.config.yaml  prod.config.yaml  stage.config.yaml
src/mcp_tool_router/: __init__.py  server.py  settings.py
src/mcp_tool_router/context/: __init__.py  compressor.py  redis_store.py
src/mcp_tool_router/embeddings/: __init__.py  client.py
src/mcp_tool_router/index/: __init__.py  store.py
src/mcp_tool_router/mcp_client/: __init__.py  factory.py  secrets.py
src/mcp_tool_router/models/: __init__.py  schemas.py
src/mcp_tool_router/registry/: __init__.py  client.py
src/mcp_tool_router/sync/: __init__.py  worker.py
src/mcp_tool_router/tools/: __init__.py  execute_tool.py  retrieve_context.py  search_tools.py
tests/: conftest.py  test_compressor.py  test_embedding_client.py  test_index_store.py  test_mcp_client_factory.py  test_mcp_client_secrets.py  test_redis_store.py  test_registry_client.py  test_schemas.py  test_settings.py  test_sync_worker.py  test_tools.py
